--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -33,6 +33,11 @@
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
+	<dependency>
+  		<groupId>javax.inject</groupId>
+  		<artifactId>javax.inject</artifactId>
+  		<version>1</version>
+	</dependency>
 <!--DEPENDENCIES ADDED END-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
