--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -55,6 +55,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>gs-messaging-stomp-websocket</artifactId>
+        	<version>0.1.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
