--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -56,13 +56,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-        	<groupId>org.springframework</groupId>
-        	<artifactId>gs-messaging-stomp-websocket</artifactId>
-        	<version>0.1.0</version>
-        </dependency>
-        <dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-websocket</artifactId>
         </dependency>
     </dependencies>
 
